--- a/hfs32.ioc
+++ b/hfs32.ioc
@@ -1,7 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.ContinuousConvMode=ENABLE
+ADC.DMAContinuousRequests=ENABLE
+ADC.IPParameters=ContinuousConvMode,DMAContinuousRequests,LowPowerAutoWait,LowPowerAutoPowerOff,SamplingTime
+ADC.LowPowerAutoPowerOff=DISABLE
+ADC.LowPowerAutoWait=DISABLE
+ADC.SamplingTime=ADC_SAMPLETIME_55CYCLES_5
+Dma.ADC.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC.2.Instance=DMA1_Channel1
+Dma.ADC.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC.2.Mode=DMA_CIRCULAR
+Dma.ADC.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC.2.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.ADC.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=USART1_TX
 Dma.Request1=USART1_RX
-Dma.RequestsNb=2
+Dma.Request2=ADC
+Dma.RequestsNb=3
 Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.1.Instance=DMA1_Channel3
 Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -23,29 +39,37 @@ Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F0
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SYS
-Mcu.IP5=TIM16
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP0=ADC
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SYS
+Mcu.IP6=TIM16
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA2
-Mcu.Pin1=PA9
-Mcu.Pin2=PA10
-Mcu.Pin3=VP_RTC_VS_RTC_Activate
-Mcu.Pin4=VP_RTC_VS_RTC_Calendar
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM16_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin1=PA3
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin2=PA4
+Mcu.Pin3=PA5
+Mcu.Pin4=PA7
+Mcu.Pin5=PB1
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=VP_RTC_VS_RTC_Activate
+Mcu.Pin9=VP_RTC_VS_RTC_Calendar
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
 MxCube.Version=5.2.1
 MxDb.Version=DB.5.0.21
+NVIC.ADC1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -53,7 +77,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:3\:0\:true\:false\:true\:true\:true
 PA10.GPIOParameters=GPIO_PuPd
 PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
@@ -64,13 +88,40 @@ PA2.GPIO_Label=LED2
 PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA2.Locked=true
-PA2.PinState=GPIO_PIN_RESET
+PA2.PinState=GPIO_PIN_SET
 PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PA3.GPIO_Label=BOOST_PWM
+PA3.GPIO_PuPd=GPIO_PULLUP
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA3.Locked=true
+PA3.PinState=GPIO_PIN_SET
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=COUNTIN
+PA4.Mode=IN4
+PA4.Signal=ADC_IN4
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA5.GPIO_Label=SET_3V
+PA5.GPIO_PuPd=GPIO_PULLUP
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PA7.GPIO_Label=OUT_LED
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA7.Locked=true
+PA7.PinState=GPIO_PIN_SET
+PA7.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_PuPd
 PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=COM_REF
+PB1.Locked=true
+PB1.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32F0x0 Value Line
 PCC.MCU=STM32F030F4Px
@@ -106,14 +157,20 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM16_Init-TIM16-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true
+RCC.AHBFreq_Value=8000000
+RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=8000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
+RCC.HCLKFreq_Value=8000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,PLLCLKFreq_Value,TimSysFreq_Value,USART1Freq_Value
 RCC.PLLCLKFreq_Value=8000000
 RCC.TimSysFreq_Value=8000000
+RCC.USART1Freq_Value=8000000
 TIM16.IPParameters=Prescaler,Period
-TIM16.Period=1000-1
-TIM16.Prescaler=8000-1
+TIM16.Period=10-1
+TIM16.Prescaler=800-1
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
